<resources>
    <string name="app_name">Food Lane</string>
    <string name="food_ordering_app">Food Lane</string>
    <string name="hi_welcome_to_our_app">Hi! Welcome to Our App</string>
    <string name="there_are_few_steps_to_follow_before_your_first_order">Quick steps to follow before your first order.</string>
    <string name="get_started">Get Started</string>
    <string name="let_s_get_your_first_order">Let\'s get your first order</string>
    <string name="full_name">Full Name</string>
    <string name="contact_no">Contact no</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up_free_account">Sign up free account</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_clicking_sign_up_you_agree_to_the_following">By clicking sign up you agree to the following</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer opening</string>
    <string name="drawer_close">Drawer closing</string>
    <string name="feel_free_to_contact_us_for_special_notes_for_your_order">Feel free to contact us for special notes for your order</string>
    <string name="my_account">My Account</string>
    <string name="uthila_wickramage">Uthila Wickramage</string>
    <string name="my_delivery_location">My Delivery Location</string>
    <string name="maharagama_colombo">Maharagama, Colombo</string>
    <string name="view_location">View Location</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="manage_your_account">Manage your account</string>
    <string name="your_name">Your name</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone">Your phone</string>
    <string name="your_email">Your email</string>
    <string name="deliver_to">Deliver to</string>
    <string name="select_location">Select Location</string>
    <string name="city">City :</string>
    <string name="loading">Loading</string>
    <string name="area">Area :</string>
    <string name="detected_address">Detected Address :</string>
    <string name="your_address">Your Address</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="hi_welcome_to_our_app_let_s_get_your_first_order">Hi! Welcome to our App. Let\'s get your first order.</string>
    <string name="view_orders">View Orders</string>
    <string name="pending">Pending</string>
    <string name="order">Order</string>
    <string name="order_made">Order made:</string>
    <string name="total_price">Total Price:</string>
    <string name="status">Status:</string>
    <string name="description">Description</string>
    <string name="quantity_order">Quantity Order</string>
    <string name="add_to_order">Add to Order</string>
    <string name="delivery">Delivery</string>
    <string name="min">min</string>
    <string name="rating">Rating</string>
    <string name="serving">Serving</string>
    <string name="person">Person</string>
    <string name="enter_your_new_value">Enter your new value</string>
    <string name="your_value">your value</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_now">Call Now</string>
    <string name="checkout">Checkout</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="add_more_items">Add more items</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="sign_up_with_phone">Sign Up With Phone</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="sign_in">Sign In</string>
    <string name="order_id">Order Id:</string>
    <string name="customer_name">Customer Name</string>
    <string name="order_date">Order Date :</string>
    <string name="price">Price</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="browse">Browse</string>
    <string name="home">Home</string>
    <string name="browse_products">Browse Products</string>
    <string name="logout">Logout</string>
</resources>